# EuroCC-Finetuning-2025

./: .gitignore  README.md  launch_notebook.sub  main.py  mri_notebook.sub  pyproject.toml
multi-gpu/: accelerate_default_config.yaml  accelerate_default_config_1gpu.yaml  phi3_guanaco_accelerate.py  phi3_guanaco_ddp.py  run_phi3_guanaco_1gpu.slurm  run_phi3_guanaco_accelerate_1gpu.slurm  run_phi3_guanaco_accelerate_multigpu.slurm  run_phi3_guanaco_ddp.slurm
notebooks/: .gitignore  D1_01_Overview.ipynb  D1_02_Quantization.ipynb  D1_02_Quantization_a100.ipynb  D1_03_PEFT.ipynb  D1_04_Unsloth.ipynb  D1_06_Quantization.ipynb  D1_07_PEFT.ipynb  D1_08_Unsloth.ipynb  D2_01_DDP_example.ipynb  D2_02_HF_Accelerate.ipynb
